# SlicerHeart

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  Gemfile  LICENSE  ModulePhilips4dUsDicomPatcher.md  OrificeArea.py  README.md  SuperBuild.cmake  SuperBuildPrerequisites.cmake  _config.yml  index.html
AnnularShapeAnalyzer/: AnnularShapeAnalyzer.py  CMakeLists.txt
AnnulusShapeAnalyzer/: AnnulusShapeAnalyzer.py  CMakeLists.txt
AsdVsdDeviceSimulator/: AsdVsdDeviceSimulator.py  CMakeLists.txt
AsdVsdDeviceSimulator/AsdVsdDevices/: devices.py
AsdVsdDeviceSimulator/Resources/Icons/: icons.psd
AsdVsdDeviceSimulator/Resources/Presets/: DuctOccluder.csv  DuctOccluder2.csv  MultiFenestratedSeptalOccluder.csv  MuscularVsdOccluder.csv  SeptalOccluder.csv
BafflePlanner/: BafflePlanner.py  CMakeLists.txt
CardiacDeviceSimulator/: CMakeLists.txt  CardiacDeviceSimulator.py
CardiacDeviceSimulatorExtender/: CMakeLists.txt  CardiacDeviceSimulatorExtender.py
CartoExport/: CMakeLists.txt  CartoExport.py
ConformalTextureMapping/: CMakeLists.txt  ConformalTextureMapping.xml
Converter4DSequences/: CMakeLists.txt  Converter4DSequences.py
DeployStent/: CMakeLists.txt  DeployStent.py
DicomPatcher/: CMakeLists.txt  DicomPatcher.py
DicomUltrasoundPlugin/: ArtemisPriv.dic  CMakeLists.txt  DicomUltrasoundPlugin.py
Docs/: AnnularShapeAnalyzer.md  AsdVsdDeviceSimulator.md  BafflePlanner.md  EAMapReader.md  EchoVolumeRender.md  FluoroFlowCalculator.md  HeartValveSequenceDesign.drawio  ImageImportExport.md  OrificeArea.md  Philips4dUsDicomPatcher.md  Reconstruct4DCineMRI.md  SlicerHeart.xcf  ValveQuantification.md  VirtualCathLab.md  VirtualCathLabCoorrdinateSystems.pptx
EAMapReader/: CMakeLists.txt  EAMapReader.py
EchoVolumeRender/: CMakeLists.txt  EchoVolumeRender.py
FEBioMeshIO/: CMakeLists.txt  FEBioMeshIO.py
FluoroFlowCalculator/: CMakeLists.txt  FluoroFlowCalculator.py
FluoroSimulator/: CMakeLists.txt  FluoroSimulator.py
FluoroSimulator/FluoroDevices/: devices.py
FluoroSimulator/FluoroSimulatorLib/: PositionerAngleViewWidget.py  __init__.py
FluoroSimulator/Resources/Models/: frontal-arm-c.ply  frontal-arm-l.ply  frontal-arm-p.ply  frontal-detector.ply  lateral-arm-c.ply  lateral-arm-p.ply  lateral-detector.ply  table-base.ply  table-middle.ply  table-top.ply
FluoroSimulator/Resources/Transforms/: lateral_camera_to_lateral_source.h5
FluoroSimulator/Resources/UI/: FluoroSimulator.ui
GeUsMovieReader/: CMakeLists.txt  qSlicerGeUsMovieReaderModule.cxx  qSlicerGeUsMovieReaderModule.h
Image3dReader/: CMakeLists.txt  Image3dReader.py
KretzFileReader/: CMakeLists.txt  qSlicerKretzFileReaderModule.cxx  qSlicerKretzFileReaderModule.h  qSlicerKretzFileReaderOptionsWidget.cxx  qSlicerKretzFileReaderOptionsWidget.h  qSlicerKretzFileReaderPlugin.cxx  qSlicerKretzFileReaderPlugin.h  qSlicerKretzFileReaderPluginWidget.cxx  qSlicerKretzFileReaderPluginWidget.h
LeafletAnalysis/: CMakeLists.txt  LeafletAnalysis.py
LeafletMoldGenerator/: CMakeLists.txt  LeafletMoldGenerator.py
OrificeArea/: CMakeLists.txt  OrificeArea.py
PDAQuantification/: CMakeLists.txt  PDAQuantification.py
PhaseSymmetryFilter/: CMakeLists.txt  PhaseSymmetryFilter.cxx  PhaseSymmetryFilter.xml
Philips4dUsDicomPatcher/: CMakeLists.txt  Philips4dUsDicomPatcher.py
Philips4dUsReader/: CMakeLists.txt  qSlicerPhilips4dUsReaderModule.cxx  qSlicerPhilips4dUsReaderModule.h
Reconstruct4DCineMRI/: CMakeLists.txt  Reconstruct4DCineMRI.py
SuperBuild/: External_ITKPhaseSymmetry.cmake  External_ITKStrain.cmake  (+1 more)
TomTecUcdPlugin/: CMakeLists.txt  TomTecUcdPlugin.py
ValveAnnulusAnalysis/: CMakeLists.txt  ValveAnnulusAnalysis.py
ValveAnnulusAnalysis/HeartValveLib/: CoaptationModel.py  Constants.py  HeartValves.py  HeartValvesSubjectHierarchyPlugin.py  LeafletModel.py  PapillaryModel.py  SmoothCurve.py  ValveBrowser.py  ValveModel.py  ValveRoi.py  __init__.py  helpers.py  util.py
ValveAnnulusAnalysis/HeartValveWidgets/: ValveSequenceBrowserWidget.py  ValveSequenceInfoWidget.py
ValveAnnulusAnalysis/Resources/: HeartOrientationMarker.vtp  SlicerHeartPDAVesselsCategoryTypeModifier_A_Normal.json  SlicerHeartPDAVesselsCategoryTypeModifier_B_CommonBrachioBicephalicTrunk.json  SlicerHeartPDAVesselsCategoryTypeModifier_C_RightAorticArch.json  SlicerHeartPDAVesselsCategoryTypeModifier_Other.json  SlicerHeartSegmentationCategoryTypeModifier.json
ValveAnnulusAnalysis/Resources/UI/: ValveAnnulusAnalysis.ui  ValveSequenceBrowserWidget.ui  ValveSequenceInfoWidget.ui
ValveAnnulusAnalysis/Resources/VrPresets/: US-VrPresets.mrml
ValveClipDeviceSimulator/: CMakeLists.txt  ValveClipDeviceSimulator.py
ValveClipDeviceSimulator/Resources/Models/: G4NTW_wing.stl  G4NT_grippers.stl  G4NT_wing.stl  G4XTW_wing.stl  G4XT_grippers.stl  G4XT_wing.stl  Mitraclip_common_base.stl  grasper.vtp  tip.vtp
ValveClipDeviceSimulator/Resources/Presets/: ValveClip.csv
ValveClipDeviceSimulator/Resources/UI/: ValveClipDeviceSimulator.ui
ValveClipDeviceSimulator/ValveClipDevices/: devices.py
ValveQuantification/: CMakeLists.txt  ValveQuantification.py
ValveQuantification/Resources/MeasurementPreset/: Cavc.html  MitralValve.html  TricuspidValve.html
ValveQuantification/ValveQuantificationLib/: MeasurementPreset.py  MeasurementPresetCavc.py  MeasurementPresetGenericValve.py  MeasurementPresetLavv.py  MeasurementPresetMitralValve.py  MeasurementPresetPhaseCompare.py  MeasurementPresetTricuspidValve.py  MeasurementPresetsPapillary.py  __init__.py
VirtualCathLab/: CMakeLists.txt  VirtualCathLab.py
VirtualCathLab/Resources/: CArmModel.arc
VirtualCathLab/Resources/Presets/: Fluoro.csv  GenericBiplaneFluoro.csv  GenericFluoro.csv
VirtualCathLab/Resources/Transforms/: frontal_camera_to_frontal_source.h5
VirtualCathLab/Resources/UI/: VirtualCathLab.ui
VirtualCathLab/Resources/VolumeRendering/: FluoroRenderingPreset_01.vp  FluoroRenderingPreset_02.vp  FluoroRenderingPreset_03.vp
VirtualCathLab/VirtualCathLabDevices/: __init__.py  devices.py
VirtualCathLab/VirtualCathLabLib/: PositionerAngleViewWidget.py
(+112 files in other folders)
